[package]
name = "somethingnet_vst3"
version = "0.2.0"
edition = "2024"
description = "VST3 network audio sender/receiver plugin for RTP/L24 multichannel audio over IP"
license = "MIT"
repository = "https://github.com/something-audio/somethingNET"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
vst3 = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSImage", "NSImageView"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
objc2-quartz-core = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }
